# hello-world

./: .gitignore  .spelling  CONTRIBUTING.md  Dockerfile  HISTORY.md  Makefile  Pipfile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  run_agent.sh  run_service.sh  setup.py  tox.ini
.claude/: CLAUDE.md  FSM_AUDIT.md
.github/workflows/: common_checks.yml  release.yaml  release.yml  workflow.yml
autonomous_agent_project/: agent_config.yaml  autonomous_agent.py  service.yaml  test_autonomous_agent.py
docs/: index.md
hello_world/: service.yaml
hello_world_service/: service.yaml
scripts/: aea-config-replace.py  bump.py  check_copyright.py  check_doc_ipfs_hashes.py  check_doc_links.py  generate_api_documentation.py  whitelist.py
