[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "hello-world"
version = "0.1.0"
description = ""
requires-python = "<3.15,>=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "open-aea[all]==2.2.1",
    "open-aea-cli-ipfs==2.2.1",
    "open-aea-ledger-cosmos==2.2.1",
    "open-aea-ledger-ethereum==2.2.1",
    "open-aea-ledger-ethereum-hwi==2.2.1",
    "open-aea-test-autonomy==0.21.18",
    "open-aea-helpers==0.21.18",
    "open-aea-ci-helpers==2.2.1",
    "open-autonomy[all]==0.21.18",
    "web3<8,>=7.0.0",
    "requests>=2.28.1,<2.33.0",
    "aiohttp<4.0.0,>=3.8.5",
    "asn1crypto<1.5.0,>=1.4.0",
    "certifi",
    "click>=8.1.0,<9",
    "docker==7.1.0",
    "ecdsa>=0.15",
    "eth-abi==5.2.0",
    "eth-utils==5.3.0",
    "eth_typing",
    "grpcio==1.78.0",
    "hexbytes",
    "hypothesis==6.21.6",
    "ipfshttpclient==0.8.0a2",
    "multidict",
    "packaging",
    "protobuf>=5,<6",
    "py-ecc==8.0.0",
    "pycryptodome==3.20.0",
    "pytest==8.4.2",
    "pytest-asyncio",
    "pytz==2022.2.1",
    "setuptools<=81.0.0",
    "toml==0.10.2",
    "typing_extensions>=3.10.0.2",
    "pip>=24.0",
]

[project.urls]
Repository = "https://github.com/valory-xyz/hello-world"

[dependency-groups]
dev = ["tomte[tests, cli]==0.6.5", "tox-uv"]

[tool.uv]
default-groups = "all"
prerelease = "allow"
# Keep httpx on the 0.x series: safety 3.7.0 (pulled via tomte[safety])
# imports httpx.NetworkError, which was removed in httpx 1.x. Without
# this constraint, UV_PRERELEASE=allow lets uv resolve to httpx 1.0.devN.
constraint-dependencies = ["httpx<1"]

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
